[package]
name = "evdev-rs-tokio"
version = "0.4.0"
authors = ["ttzztztz <ttzztztz@outlook.com>"]
license = "MIT/Apache-2.0"
keywords = ["evdev"]
readme = "README.md"
repository = "https://github.com/keyboard-mapping/evdev-rs-rokio"
edition = "2018"
description = """
Bindings to libevdev for interacting with evdev devices. It moves the
common tasks when dealing with evdev devices into a library and provides
a library interface to the callers, thus avoiding erroneous ioctls, etc.
"""

[features]
default = []

[dependencies]
serde = { version = "1.0", default-features = false, features=["derive"], optional = true }
evdev-sys = { path = "evdev-sys", version = "0.2.1" }
libc = "0.2.67"
bitflags = "1.2.1"
log = "0.4.8"
tokio = { version = "1.4.0", features = ["full"] }

[package.metadata.docs.rs]
features = ["serde"]